fixed the user menu on IE7

--- a/wp-content/themes/mojintranet/assets/css/src/modules/_header.scss
+++ b/wp-content/themes/mojintranet/assets/css/src/modules/_header.scss
@@ -120,8 +120,7 @@
 
   .select-agency-trigger-container {
     position: relative;
-    display: inline-block;
-    padding: 6px 0;
+    padding: 0;
     z-index: 2;
 
     .agency a {
